[package]
name = "basic-todoapi"
version = "0.1.0"
authors = ["Jawad W. Ahmed <Jawad.W.Ahmed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
